[tool.poetry]
name = "maze-solver"
version = "0.1.0"
description = "A rudimentary maze solver"
authors = ["Jakub Wilk <mail@jakubwilk.xyz>"]

[tool.poetry.dependencies]
python = "^3.9"
Pillow = "^8.3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
